tests/ui/spirv-attr/invalid-matrix-type.stderr
error: #[spirv(matrix)] type must have at least two fields
 --> $DIR/invalid-matrix-type.rs:7:1
  |
7 | / pub struct _FewerFields {
8 | |     _v: glam::Vec3,
9 | | }
  | |_^

error: #[spirv(matrix)] type fields must all be vectors
  --> $DIR/invalid-matrix-type.rs:12:1
   |
12 | / pub struct _NotVectorField {
13 | |     _x: f32,
14 | |     _y: f32,
15 | |     _z: f32,
16 | | }
   | |_^
   |
   = note: field type is f32

error: #[spirv(matrix)] type fields must all be the same type
  --> $DIR/invalid-matrix-type.rs:19:1
   |
19 | / pub struct _DifferentType {
20 | |     _x: glam::Vec3,
21 | |     _y: glam::Vec2,
22 | | }
   | |_^

error: aborting due to 3 previous errors

